improve many hot loops